--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Loose Snow - About Us</title>
+        <title>Wisdom's Handlettering - About Us</title>
         <link rel="icon" href="Logo.png">
         <link href="main.css" rel="stylesheet" type="text/css" />
     </head>
@@ -42,7 +42,7 @@
                 <div class="about" id="cam">
                     <img src="Cameron.jpg" alt="Cameron Wolfe"/>
                     <h2 class="name">Cameron Wolfe <br> Age: 14</h2>
-                    <p>I love sports, and music.  I nordic ski, I alpine ski, also I play baseball, football, and I love to swim and run.  In school, I work very hard and do many extracurriculars.  For example, I am in a jazz band called “Coffee House Combo” who played at the TEDX Vail.  I have done many things in my life, I love to have fun, and do a good job at whatever I do.</p>
+                    <p>I love Wizzywiz, and music.  I nordic ski, I alpine ski, also I play baseball, football, and I love to swim and run.  In school, I work very hard and do many extracurriculars.  For example, I am in a jazz band called “Coffee House Combo” who played at the TEDX Vail.  I have done many things in my life, I love to have fun, and do a good job at whatever I do.</p>
                 </div>
                 <div class="about" id="bora">
                     <img src="Bora.jpg" alt="Bora Basyildiz"/>
